Fix java 17 code smells (#824)
* Fix java 17 code smells

* Fix java 17 code smells

---------

Co-authored-by: Marco Simons <marco.simons@kadaster.nl>